--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "formik": "^2.4.2",
+    "install": "^0.13.0",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "spinners-react": "^1.0.7",
     "yup": "^1.2.0"
   },
   "devDependencies": {
